# neural-ldpc-decoder-torch

./: .gitignore  LICENSE  README.md  pyproject.toml
src/boosted_neural_ldpc_decoder/: AWGNPassedDatagen.py  BoostedNeuralLDPCDecoder.py  ConnectingMatrix.py  ConnectingMatrixTorch.py  Functions.py  LDPCDecoderLoss.py  __init__.py
src/boosted_neural_ldpc_decoder/struct/: Clipping.py  DecoderType.py  LearningRate.py  LossType.py  NodeType.py  NodeWeightSharingConfig.py  ParamType.py  Puncture.py  Shortening.py
src/checkpoint_utils/: CheckPointUtil.py  MetricsLogger.py  __init__.py
src/neural_ldpc_decoder/: AWGNPassedDatagen.py  ConnectingMatrix.py  ConnectingMatrixTorch.py  NeuralLDPCDecoder.py  __init__.py
test/test_boosted_neural_ldpc_decoder/: test_BoostedNeuralLDPCDecoder.py
test/test_neural_ldpc_decoder/: testNeuralLDPCDecoder.py  test_NeuralLDPCDecoder.py
train/: train_BoostedNeuralLDPCDecoder.py
