[project]
name = "neural_ldpc_decoder"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Jonghyeon Park", email = "shapelayer.dev@gmail.com" }
]
dependencies = [
    "torch>=2.8.0",
    "torchvision>=0.23.0",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/neural_ldpc_decoder"]
