[project]
name = "neural_ldpc_decoder_torch"
version = "0.1.0"
description = "Neural LDPC Decoder Torch Implementation"
authors = [
    { name = "Jonghyeon Park", email = "shapelayer.dev@gmail.com" }
]
dependencies = [
    "torch>=2.8.0",
    "torchvision>=0.23.0",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = [
    "src/neural_ldpc_decoder",
    "src/boosted_neural_ldpc_decoder",
    "src/checkpoint_utils"
]

[tool.rye.scripts]
test_boosted_neural_ms = "python test/test_boosted_neural_ldpc_decoder/test_BoostedNeuralLDPCDecoder.py"
test_neural_ms = "python test/test_neural_ldpc_decoder/test_NeuralLDPCDecoder.py"
clear_checkpoint = "rm -rf checkpoints"
train_boosted_neural_ms = "python train/train_BoostedNeuralLDPCDecoder.py"
